syntax = "proto3";

package proto;
option go_package = "./proto";

import "google/protobuf/timestamp.proto";

message PaymentRequest {
    Payment payment = 1;
}

message PaymentResponse {
    int64 id = 1;
    Payment payment = 2;
    google.protobuf.Timestamp created_at = 3;
}
  
message Payment {
  int64 booking_id = 1;
  float price = 2;
  bool paid = 3;
}

service PaymentService {
  rpc CreatePaymentRequest(PaymentRequest) returns (PaymentResponse);
}